--- a/ant.properties
+++ b/ant.properties
@@ -15,5 +15,5 @@
 #  'key.alias' for the name of the key to use.
 # The password will be asked during the build when you use the 'release' target.
 
-key.alias=jackpal.keystore
-key.store=../../Documents/workspace/keystore/jackpal.keystore
+key.alias=ZKey
+key.store=/home/michal/android/_info/my-r-keystore.keystore
